@@ -25,14 +25,21 @@ import androidx.build.checkapi.JavaApiTaskConfig
 import androidx.build.checkapi.KmpApiTaskConfig
 import androidx.build.checkapi.LibraryApiTaskConfig
 import androidx.build.checkapi.configureProjectForApiTasks
+import androidx.build.dependencyTracker.AffectedModuleDetector
 import androidx.build.docs.CheckTipOfTreeDocsTask.Companion.setUpCheckDocsTask
+import androidx.build.gitclient.getHeadShaProvider
 import androidx.build.gradle.isRoot
+import androidx.build.kythe.configureProjectForKzipTasks
 import androidx.build.license.addLicensesToPublishedArtifacts
-import androidx.build.license.configureExternalDependencyLicenseCheck
-import androidx.build.resources.CopyPublicResourcesDirTask
+import androidx.build.lint.ValidateLintChecks
 import androidx.build.resources.configurePublicResourcesStub
 import androidx.build.sbom.configureSbomPublishing
 import androidx.build.sbom.validateAllArchiveInputsRecognized
+import androidx.build.sources.configureMultiplatformSourcesForAndroid
+import androidx.build.sources.configureSourceJarForAndroid
+import androidx.build.sources.configureSourceJarForJava
+import androidx.build.sources.configureSourceJarForMultiplatform
+import androidx.build.sources.registerValidateMultiplatformSourceSetNamingTask
 import androidx.build.studio.StudioTask
 import androidx.build.testConfiguration.addAppApkToTestConfigGeneration
 import androidx.build.testConfiguration.addToModuleInfo
@@ -40,29 +47,31 @@ import androidx.build.testConfiguration.configureTestConfigGeneration
 import androidx.build.uptodatedness.TaskUpToDateValidator
 import androidx.build.uptodatedness.cacheEvenIfNoOutputs
 import com.android.build.api.artifact.SingleArtifact
+import com.android.build.api.attributes.BuildTypeAttr
 import com.android.build.api.dsl.ApplicationExtension
-import com.android.build.api.dsl.CommonExtension
-import com.android.build.api.dsl.KotlinMultiplatformAndroidTarget
-import com.android.build.api.dsl.KotlinMultiplatformAndroidTestOnDeviceCompilation
-import com.android.build.api.dsl.KotlinMultiplatformAndroidTestOnJvmCompilation
+import com.android.build.api.dsl.KotlinMultiplatformAndroidDeviceTestCompilation
+import com.android.build.api.dsl.KotlinMultiplatformAndroidHostTestCompilation
+import com.android.build.api.dsl.KotlinMultiplatformAndroidLibraryTarget
 import com.android.build.api.dsl.LibraryExtension
-import com.android.build.api.dsl.PrivacySandboxSdkExtension
 import com.android.build.api.dsl.TestBuildType
 import com.android.build.api.dsl.TestExtension
+import com.android.build.api.variant.AarMetadata
 import com.android.build.api.variant.AndroidComponentsExtension
 import com.android.build.api.variant.ApplicationAndroidComponentsExtension
 import com.android.build.api.variant.HasDeviceTests
 import com.android.build.api.variant.HasUnitTestBuilder
 import com.android.build.api.variant.KotlinMultiplatformAndroidComponentsExtension
 import com.android.build.api.variant.LibraryAndroidComponentsExtension
-import com.android.build.api.variant.Variant
+import com.android.build.api.variant.LibraryVariant
+import com.android.build.api.variant.LibraryVariantBuilder
 import com.android.build.gradle.AppPlugin
 import com.android.build.gradle.LibraryPlugin
 import com.android.build.gradle.TestPlugin
 import com.android.build.gradle.api.KotlinMultiplatformAndroidPlugin
-import com.android.build.gradle.api.PrivacySandboxSdkPlugin
-import com.android.build.gradle.tasks.factory.AndroidUnitTest
-import com.android.utils.appendCapitalized
+import com.google.devtools.ksp.gradle.KspExtension
+import com.google.devtools.ksp.gradle.KspGradleSubplugin
+import com.google.protobuf.gradle.ProtobufExtension
+import com.google.protobuf.gradle.ProtobufPlugin
 import java.io.File
 import java.time.Duration
 import java.util.Locale
@@ -80,7 +89,10 @@ import org.gradle.api.artifacts.CacheableRule
 import org.gradle.api.artifacts.ComponentMetadataContext
 import org.gradle.api.artifacts.ComponentMetadataRule
 import org.gradle.api.artifacts.Configuration
-import org.gradle.api.component.SoftwareComponentFactory
+import org.gradle.api.artifacts.ExternalDependency
+import org.gradle.api.attributes.Category
+import org.gradle.api.attributes.Usage
+import org.gradle.api.configuration.BuildFeatures
 import org.gradle.api.file.DuplicatesStrategy
 import org.gradle.api.plugins.JavaPlugin
 import org.gradle.api.plugins.JavaPluginExtension
@@ -89,32 +101,32 @@ import org.gradle.api.tasks.Copy
 import org.gradle.api.tasks.TaskProvider
 import org.gradle.api.tasks.bundling.Zip
 import org.gradle.api.tasks.compile.JavaCompile
-import org.gradle.api.tasks.javadoc.Javadoc
 import org.gradle.api.tasks.testing.AbstractTestTask
-import org.gradle.api.tasks.testing.Test
 import org.gradle.api.tasks.testing.logging.TestExceptionFormat
 import org.gradle.api.tasks.testing.logging.TestLogEvent
 import org.gradle.build.event.BuildEventsListenerRegistry
 import org.gradle.jvm.tasks.Jar
-import org.gradle.kotlin.dsl.KotlinClosure1
 import org.gradle.kotlin.dsl.create
 import org.gradle.kotlin.dsl.dependencies
-import org.gradle.kotlin.dsl.extra
 import org.gradle.kotlin.dsl.findByType
 import org.gradle.kotlin.dsl.getByType
+import org.gradle.kotlin.dsl.named
 import org.gradle.kotlin.dsl.withModule
 import org.gradle.kotlin.dsl.withType
 import org.gradle.plugin.devel.plugins.JavaGradlePluginPlugin
 import org.gradle.plugin.devel.tasks.ValidatePlugins
+import org.gradle.process.CommandLineArgumentProvider
 import org.jetbrains.kotlin.gradle.dsl.ExplicitApiMode
 import org.jetbrains.kotlin.gradle.dsl.JvmTarget
+import org.jetbrains.kotlin.gradle.dsl.KotlinAndroidProjectExtension
 import org.jetbrains.kotlin.gradle.dsl.KotlinMultiplatformExtension
 import org.jetbrains.kotlin.gradle.dsl.KotlinProjectExtension
 import org.jetbrains.kotlin.gradle.dsl.KotlinVersion
+import org.jetbrains.kotlin.gradle.plugin.KotlinBaseApiPlugin
 import org.jetbrains.kotlin.gradle.plugin.KotlinBasePluginWrapper
 import org.jetbrains.kotlin.gradle.plugin.KotlinMultiplatformPluginWrapper
 import org.jetbrains.kotlin.gradle.plugin.KotlinPlatformType
-import org.jetbrains.kotlin.gradle.plugin.mpp.KotlinAndroidTarget
+import org.jetbrains.kotlin.gradle.plugin.KotlinSourceSet
 import org.jetbrains.kotlin.gradle.targets.jvm.KotlinJvmTarget
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompilationTask
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
@@ -124,54 +136,54 @@ import org.jetbrains.kotlin.gradle.tasks.KotlinJvmCompile
  * A plugin which enables all of the Gradle customizations for AndroidX. This plugin reacts to other
  * plugins being added and adds required and optional functionality.
  */
-abstract class AndroidXImplPlugin
-@Inject
-constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Project> {
+abstract class AndroidXImplPlugin @Inject constructor() : Plugin<Project> {
     @get:Inject abstract val registry: BuildEventsListenerRegistry
+    @get:Inject abstract val buildFeatures: BuildFeatures
 
     override fun apply(project: Project) {
         if (project.isRoot)
             throw Exception("Root project should use AndroidXRootImplPlugin instead")
-        val androidXExtension =
-            project.extensions.create<AndroidXExtension>(EXTENSION_NAME, project)
+        val androidXExtension = initializeAndroidXExtension(project)
 
         val androidXKmpExtension =
             project.extensions.create<AndroidXMultiplatformExtension>(
                 AndroidXMultiplatformExtension.EXTENSION_NAME,
-                project
+                project,
             )
 
         project.tasks.register(BUILD_ON_SERVER_TASK, DefaultTask::class.java)
         // Perform different actions based on which plugins have been applied to the project.
         // Many of the actions overlap, ex. API tracking.
         project.plugins.configureEach { plugin ->
-            @Suppress("UnstableApiUsage") // PrivacySandboxSdkPlugin, KMPAndroidPlugin
             when (plugin) {
                 is JavaGradlePluginPlugin -> configureGradlePluginPlugin(project)
                 is JavaPlugin -> configureWithJavaPlugin(project, androidXExtension)
                 is LibraryPlugin -> configureWithLibraryPlugin(project, androidXExtension)
                 is AppPlugin -> configureWithAppPlugin(project, androidXExtension)
                 is TestPlugin -> configureWithTestPlugin(project, androidXExtension)
+                is KspGradleSubplugin -> configureWithKspPlugin(project)
                 is KotlinMultiplatformAndroidPlugin ->
                     configureWithKotlinMultiplatformAndroidPlugin(
                         project,
                         androidXKmpExtension.agpKmpExtension,
-                        androidXExtension
+                        androidXExtension,
                     )
-                is KotlinBasePluginWrapper ->
+                is KotlinBasePluginWrapper,
+                is KotlinBaseApiPlugin ->
                     configureWithKotlinPlugin(
                         project,
                         androidXExtension,
                         plugin,
-                        androidXKmpExtension
+                        androidXKmpExtension,
                     )
-                is PrivacySandboxSdkPlugin -> configureWithPrivacySandboxSdkPlugin(project)
+                is ProtobufPlugin -> configureProtobufPlugin(project)
             }
         }
 
         project.configureLint()
         project.configureKtfmt()
         project.configureKotlinVersion()
+        project.configureJavaFormat()
 
         // Avoid conflicts between full Guava and LF-only Guava.
         project.configureGuavaUpgradeHandler()
@@ -180,29 +192,20 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
         project.tasks.withType(Zip::class.java).configureEach { it.configureForHermeticBuild() }
         project.tasks.withType(Copy::class.java).configureEach { it.configureForHermeticBuild() }
 
-        val allHostTests = project.tasks.register("allHostTests").get()
+        val allHostTests = project.tasks.register("allHostTests")
         // copy host side test results to DIST
         project.tasks.withType(AbstractTestTask::class.java) { task ->
-            configureTestTask(project, task, allHostTests)
-        }
-
-        project.tasks.withType(Test::class.java).configureEach { task ->
-            configureJvmTestTask(project, task)
+            configureTestTask(project, task, allHostTests, androidXExtension)
         }
 
         project.configureTaskTimeouts()
-        project.configureMavenArtifactUpload(
-            androidXExtension,
-            androidXKmpExtension,
-            componentFactory
-        ) {
+        project.configureMavenArtifactUpload(androidXExtension, androidXKmpExtension) {
+            if (buildFeatures.isIsolatedProjectsEnabled()) return@configureMavenArtifactUpload
             project.addCreateLibraryBuildInfoFileTasks(androidXExtension, androidXKmpExtension)
         }
         project.publishInspectionArtifacts()
-        project.configureExternalDependencyLicenseCheck()
         project.configureProjectStructureValidation(androidXExtension)
         project.configureProjectVersionValidation(androidXExtension)
-        project.registerProjectOrArtifact()
         project.validateMultiplatformPluginHasNotBeenApplied()
 
         project.tasks.register("printCoordinates", PrintProjectCoordinatesTask::class.java) {
@@ -212,50 +215,45 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
         project.validateProjectParser(androidXExtension)
         project.validateAllArchiveInputsRecognized()
         project.afterEvaluate {
-            if (androidXExtension.shouldPublishSbom()) {
+            if (androidXExtension.shouldPublishSbom().get()) {
                 project.configureSbomPublishing()
             }
-            if (androidXExtension.shouldPublish()) {
+            if (androidXExtension.shouldPublish.get()) {
                 project.validatePublishedMultiplatformHasDefault()
                 project.addLicensesToPublishedArtifacts(androidXExtension.license)
+                project.registerValidateRelocatedDependenciesTask()
             }
             project.registerValidateMultiplatformSourceSetNamingTask()
             project.validateLintVersionTestExists(androidXExtension)
         }
-        project.disallowAccidentalAndroidDependenciesInKmpProject(androidXKmpExtension)
         TaskUpToDateValidator.setup(project, registry)
 
-        project.workaroundPrebuiltTakingPrecedenceOverProject()
+        project.workaroundAndroidXDependencyResolutions()
         project.configureSamplesProject()
         project.configureMaxDepVersions(androidXExtension)
+        project.configureUnzipChromeBuildService()
+
+        project.configureDependencyAnalysisPlugin()
     }
 
-    private fun Project.registerProjectOrArtifact() {
-        // Add a method for each sub project where they can declare an optional
-        // dependency on a project or its latest snapshot artifact.
-        if (!ProjectLayoutType.isPlayground(this)) {
-            // In AndroidX build, this is always enforced to the project
-            extra.set(
-                PROJECT_OR_ARTIFACT_EXT_NAME,
-                KotlinClosure1<String, Project>(
-                    function = {
-                        // this refers to the first parameter of the closure.
-                        project.resolveProject(this)
-                    }
-                )
+    private fun initializeAndroidXExtension(project: Project): AndroidXExtension {
+        val versionService = LibraryVersionsService.registerOrGet(project).get()
+        val listProjectsService = ListProjectsService.registerOrGet(project)
+        return project.extensions
+            .create<AndroidXExtension>(
+                EXTENSION_NAME,
+                project,
+                versionService.libraryVersions,
+                versionService.libraryGroups.values.toList(),
+                versionService.libraryGroupsByGroupId,
+                versionService.overrideLibraryGroupsByProjectPath,
+                listProjectsService.map { it.allPossibleProjects },
+                { project.getHeadShaProvider() },
+                { configurationName: String ->
+                    configureAarAsJarForConfiguration(project, configurationName)
+                },
             )
-        } else {
-            // In Playground builds, they are converted to the latest SNAPSHOT artifact if the
-            // project is not included in that playground.
-            extra.set(
-                PROJECT_OR_ARTIFACT_EXT_NAME,
-                KotlinClosure1<String, Any>(
-                    function = {
-                        AndroidXPlaygroundRootImplPlugin.projectOrArtifact(rootProject, this)
-                    }
-                )
-            )
-        }
+            .apply { kotlinTarget.set(KotlinTarget.DEFAULT) }
     }
 
     /**
@@ -271,42 +269,17 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
         duplicatesStrategy = DuplicatesStrategy.FAIL
     }
 
-    private fun configureJvmTestTask(project: Project, task: Test) {
-        // Robolectric 1.7 increased heap size requirements, see b/207169653.
-        task.maxHeapSize = "3g"
-
-        // For non-playground setup use robolectric offline
-        if (!ProjectLayoutType.isPlayground(project)) {
-            task.systemProperty("robolectric.offline", "true")
-            val robolectricDependencies =
-                File(
-                    project.getPrebuiltsRoot(),
-                    "androidx/external/org/robolectric/android-all-instrumented"
-                )
-            task.systemProperty(
-                "robolectric.dependency.dir",
-                robolectricDependencies.relativeTo(project.projectDir)
-            )
-        }
-    }
-
     private fun configureTestTask(
         project: Project,
         task: AbstractTestTask,
-        anchorTask: Task,
+        anchorTask: TaskProvider<Task>,
+        androidXExtension: AndroidXExtension,
     ) {
-        if (task.name !in listOf("jvmStubsTest")) anchorTask.dependsOn(task)
-        val ignoreFailuresProperty =
-            project.providers.gradleProperty(TEST_FAILURES_DO_NOT_FAIL_TEST_TASK)
-        val ignoreFailures = ignoreFailuresProperty.isPresent
-        if (ignoreFailures) {
-            task.ignoreFailures = true
-        }
-        task.inputs.property("ignoreFailures", ignoreFailures)
-
+        anchorTask.configure { it.dependsOn(task) }
         val xmlReportDestDir = project.getHostTestResultDirectory()
         val testName = "${project.path}:${task.name}"
-        project.addToModuleInfo(testName)
+        project.addToModuleInfo(testName, buildFeatures.isIsolatedProjectsEnabled())
+        androidXExtension.testModuleNames.add(testName)
         val archiveName = "$testName.zip"
         if (project.isDisplayTestOutput()) {
             // Enable tracing to see results in command line
@@ -336,12 +309,13 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
                 val zipXmlTask =
                     project.tasks.register(
                         "zipXmlResultsOf$capitalizedTestTaskName",
-                        Zip::class.java
+                        Zip::class.java,
                     ) {
                         it.destinationDirectory.set(xmlReportDestDir)
                         it.archiveFileName.set(archiveName)
                         it.from(project.file(xmlReport.outputLocation))
                         it.include("*.xml")
+                        AffectedModuleDetector.configureTaskGuard(it)
                     }
                 task.finalizedBy(zipXmlTask)
             }
@@ -351,23 +325,24 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
     /** Configures the project to use the Kotlin version specified by `androidx.kotlinTarget`. */
     private fun Project.configureKotlinVersion() {
         val kotlinVersionStringProvider = androidXConfiguration.kotlinBomVersion
-        val kotlinTestVersionStringProvider = androidXConfiguration.kotlinTestBomVersion
 
         // Resolve unspecified Kotlin versions to the target version.
+        // TODO(b/443037365): Remove when bug fixed as built-in Kotlin would handle this
         configurations.configureEach { configuration ->
-            val useVersionStringProvider =
-                if (configuration.isTest()) {
-                    kotlinTestVersionStringProvider
-                } else {
-                    kotlinVersionStringProvider
-                }
-            configuration.resolutionStrategy { strategy ->
-                strategy.eachDependency { details ->
+            configuration.withDependencies { dependencySet ->
+                dependencySet.filterIsInstance<ExternalDependency>().forEach { dependency ->
                     if (
-                        details.requested.group == "org.jetbrains.kotlin" &&
-                            details.requested.version == null
+                        dependency.group == "org.jetbrains.kotlin" &&
+                            dependency.version.isNullOrEmpty()
                     ) {
-                        details.useVersion(useVersionStringProvider.get())
+                        project.dependencies.constraints.add(
+                            configuration.name,
+                            dependency.module.toString(),
+                        ) {
+                            it.version { constraint ->
+                                constraint.require(kotlinVersionStringProvider.get())
+                            }
+                        }
                     }
                 }
             }
@@ -377,26 +352,12 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
             KotlinVersion.fromVersion(version.substringBeforeLast('.'))
         }
 
-        fun KotlinCompilationTask<*>.isTestCompilation() =
-            multiplatformExtension?.targets?.any { target ->
-                target.compilations.findByName("test")?.compileKotlinTaskName == name
-            } ?: false
-
         // Set the Kotlin compiler's API and language version to ensure bytecode is compatible.
         val kotlinVersionProvider = kotlinVersionStringProvider.toKotlinVersionProvider()
-        val kotlinTestVersionProvider = kotlinTestVersionStringProvider.toKotlinVersionProvider()
         tasks.configureEach { task ->
             if (task is KotlinCompilationTask<*>) {
-                // We can't directly determine if a Task is compiling test code, but we can scrape
-                // the names of all the compilation units and compare them to Task names.
-                val useVersionProvider =
-                    if (task.isTestCompilation()) {
-                        kotlinTestVersionProvider
-                    } else {
-                        kotlinVersionProvider
-                    }
-                task.compilerOptions.apiVersion.set(useVersionProvider)
-                task.compilerOptions.languageVersion.set(useVersionProvider)
+                task.compilerOptions.apiVersion.set(kotlinVersionProvider)
+                task.compilerOptions.languageVersion.set(kotlinVersionProvider)
             }
         }
 
@@ -408,10 +369,10 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
             evaluatedProject.kotlinExtensionOrNull?.let { kotlinExtension ->
                 kotlinExtension.coreLibrariesVersion = kotlinVersionStringProvider.get()
             }
-            if (evaluatedProject.androidXExtension.shouldPublish()) {
+            if (evaluatedProject.androidXExtension.shouldPublish.get()) {
                 tasks.register(
                     CheckKotlinApiTargetTask.TASK_NAME,
-                    CheckKotlinApiTargetTask::class.java
+                    CheckKotlinApiTargetTask::class.java,
                 ) {
                     it.kotlinTarget.set(kotlinVersionProvider)
                     it.outputFile.set(layout.buildDirectory.file("kotlinApiTargetCheckReport.txt"))
@@ -453,48 +414,42 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
     private fun configureWithKotlinPlugin(
         project: Project,
         androidXExtension: AndroidXExtension,
-        plugin: KotlinBasePluginWrapper,
-        androidXMultiplatformExtension: AndroidXMultiplatformExtension
+        plugin: Any,
+        androidXMultiplatformExtension: AndroidXMultiplatformExtension,
     ) {
         val targetsAndroid =
             project.provider {
                 project.plugins.hasPlugin(LibraryPlugin::class.java) ||
                     project.plugins.hasPlugin(AppPlugin::class.java) ||
                     project.plugins.hasPlugin(TestPlugin::class.java) ||
-                    @Suppress("UnstableApiUsage")
                     project.plugins.hasPlugin(KotlinMultiplatformAndroidPlugin::class.java)
             }
         val defaultJavaTargetVersion =
-            project.provider {
-                getDefaultTargetJavaVersion(androidXExtension.type, project.name).toString()
-            }
+            androidXExtension.type.map { getDefaultTargetJavaVersion(it, project.name).toString() }
         val defaultJvmTarget = defaultJavaTargetVersion.map { JvmTarget.fromTarget(it) }
         if (plugin is KotlinMultiplatformPluginWrapper) {
             project.extensions.getByType<KotlinMultiplatformExtension>().apply {
-                targets.withType<KotlinAndroidTarget> {
-                    compilations.configureEach {
-                        it.compileTaskProvider.configure { task ->
-                            task.compilerOptions.jvmTarget.set(defaultJvmTarget)
+                targets.withType<KotlinMultiplatformAndroidLibraryTarget>().configureEach { t ->
+                    t.compilations.configureEach { compilation ->
+                        compilation.compileTaskProvider.configure {
+                            it.compilerOptions.jvmTarget.set(defaultJvmTarget)
                         }
                     }
                 }
-                targets.withType<KotlinJvmTarget> {
+                targets.withType(KotlinJvmTarget::class.java).configureEach { target ->
                     val defaultTargetVersionForNonAndroidTargets =
-                        project.provider {
+                        androidXExtension.type.map {
                             getDefaultTargetJavaVersion(
-                                    libraryType = androidXExtension.type,
+                                    softwareType = it,
                                     projectName = project.name,
-                                    targetName = name
+                                    targetName = target.name,
                                 )
                                 .toString()
                         }
                     val defaultJvmTargetForNonAndroidTargets =
                         defaultTargetVersionForNonAndroidTargets.map { JvmTarget.fromTarget(it) }
-                    compilations.configureEach { compilation ->
+                    target.compilations.configureEach { compilation ->
                         compilation.compileJavaTaskProvider?.configure { javaCompile ->
-                            println(
-                                "target javac ${defaultTargetVersionForNonAndroidTargets.get()}"
-                            )
                             javaCompile.targetCompatibility =
                                 defaultTargetVersionForNonAndroidTargets.get()
                             javaCompile.sourceCompatibility =
@@ -532,8 +487,15 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
         project.tasks.withType(KotlinCompile::class.java).configureEach { task ->
             val kotlinCompilerArgs =
                 project.provider {
-                    val args = mutableListOf("-Xskip-metadata-version-check", "-Xjvm-default=all")
-                    if (androidXExtension.type.targetsKotlinConsumersOnly) {
+                    val args =
+                        mutableListOf(
+                            "-Xskip-metadata-version-check",
+                            "-jvm-default=no-compatibility",
+                            // These two args can be removed once kotlin 2.1 is used
+                            "-Xjspecify-annotations=strict",
+                            "-Xtype-enhancement-improvements-strict-mode",
+                        )
+                    if (androidXExtension.type.get().targetsKotlinConsumersOnly) {
                         // The Kotlin Compiler adds intrinsic assertions which are only relevant
                         // when the code is consumed by Java users. Therefore we can turn this off
                         // when code is being consumed by Kotlin users.
@@ -545,7 +507,7 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
                             listOf(
                                 "-Xno-param-assertions",
                                 "-Xno-call-assertions",
-                                "-Xno-receiver-assertions"
+                                "-Xno-receiver-assertions",
                             )
                     }
 
@@ -574,7 +536,7 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
             // Disable any source JAR task(s) added by KotlinMultiplatformPlugin.
             // https://youtrack.jetbrains.com/issue/KT-55881
             project.tasks.withType(Jar::class.java).configureEach { jarTask ->
-                if (jarTask.name == "jvmSourcesJar") {
+                if (jarTask.name == "androidSourcesJar" || jarTask.name == "jvmSourcesJar") {
                     // We can't set duplicatesStrategy directly on the Jar task since it will get
                     // overridden when the KotlinMultiplatformPlugin creates child specs, but we
                     // can set it on a per-file basis.
@@ -588,11 +550,25 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
         project.afterEvaluate {
             val kotlinExtension = project.kotlinExtensionOrNull
             kotlinExtension?.explicitApi =
-                if (androidXExtension.shouldEnforceKotlinStrictApiMode()) {
+                if (androidXExtension.shouldEnforceKotlinStrictApiMode().get()) {
                     ExplicitApiMode.Strict
                 } else {
                     ExplicitApiMode.Disabled
                 }
+            if (plugin is KotlinBaseApiPlugin) {
+                // TODO(b/443080559): Remove when built-in Kotlin adds kotlin-test-junit
+                // automatically
+                (kotlinExtension as KotlinAndroidProjectExtension)
+                    .target
+                    .compilations
+                    .configureEach { compilation ->
+                        if (!compilation.name.contains("test", ignoreCase = true))
+                            return@configureEach
+                        compilation.defaultSourceSet.dependencies {
+                            implementation(kotlin("test-junit"))
+                        }
+                    }
+            }
         }
     }
 
@@ -619,14 +595,14 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
                 // Remove the cast when we upgrade to AGP 9.0.0
                 (variant as HasUnitTestBuilder).enableUnitTest = false
             }
-            onVariants {
-                it.configureTests()
-                it.configureLocalAsbSigning(project.getKeystore())
-            }
+            onVariants { it.configureTests(project.getKeystore()) }
         }
 
+        project.configureJavaCompilationWarnings(
+            androidXExtension = androidXExtension,
+            isTestApp = true,
+        )
         project.buildOnServerDependsOnAssembleRelease()
-        project.buildOnServerDependsOnLint()
     }
 
     private fun configureWithTestPlugin(project: Project, androidXExtension: AndroidXExtension) {
@@ -640,105 +616,162 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
                 // Sign all the builds (including release) with debug key
                 buildType.signingConfig = debugSigningConfig
             }
-            project.configureTestConfigGeneration(this)
+            project.configureTestConfigGeneration(
+                androidXExtension.isIsolatedProjectsEnabled(),
+                androidXExtension,
+            )
             project.addAppApkToTestConfigGeneration(androidXExtension)
             excludeVersionFiles(packaging.resources)
         }
-
         project.configureJavaCompilationWarnings(androidXExtension)
+    }
+
+    private fun configureWithKspPlugin(project: Project) =
+        project.extensions.getByType<KspExtension>().useKsp2.set(true)
+
+    private fun configureCommonAndroidLibrary(
+        project: Project,
+        androidXExtension: AndroidXExtension,
+        androidComponents:
+            AndroidComponentsExtension<*, out LibraryVariantBuilder, out LibraryVariant>,
+    ) {
+        androidComponents.onVariants { variant ->
+            variant.configureTests(project.getKeystore())
+            variant.enableMicrobenchmarkInternalDefaults(project)
+            project.validateKotlinModuleFiles(
+                variant.name,
+                variant.artifacts.get(SingleArtifact.AAR),
+            )
+        }
+
+        project.disableStrictVersionConstraints()
+        project.configureJavaCompilationWarnings(androidXExtension)
+        project.setUpCheckDocsTask(androidXExtension)
+    }
+
+    private fun KotlinSourceSet.includesSourceSet(otherName: String): Boolean =
+        name == otherName || dependsOn.any { it.includesSourceSet(otherName) }
+
+    private fun AarMetadata.configureMinAgpVersion() {
+        @Suppress("UnstableApiUsage") // usage of minAgpVersion
+        minAgpVersion.set(
+            @Suppress(
+                "Deprecated"
+            ) // TODO: use `minCompileSdkVersion` once http://ag/38072823 merged
+            minCompileSdk.map { value ->
+                // Taken from
+                // https://developer.android.com/build/releases/about-agp#api-level-support
+                when (value) {
+                    1 -> "7.2.0"
+                    33 -> "7.2.0"
+                    34 -> "8.1.1"
+                    35 -> "8.6.0"
+                    36 -> "8.9.1"
+                    else -> throw Exception("Unknown compileSdk to minAgpVersion mapping")
+                }
+            }
+        )
     }
 
     private fun configureWithKotlinMultiplatformAndroidPlugin(
         project: Project,
-        kotlinMultiplatformAndroidTarget: KotlinMultiplatformAndroidTarget,
-        androidXExtension: AndroidXExtension
+        kotlinMultiplatformAndroidTarget: KotlinMultiplatformAndroidLibraryTarget,
+        androidXExtension: AndroidXExtension,
     ) {
         val kotlinMultiplatformAndroidComponentsExtension =
             project.extensions.getByType<KotlinMultiplatformAndroidComponentsExtension>()
         kotlinMultiplatformAndroidTarget.configureAndroidBaseOptions(
             project,
-            kotlinMultiplatformAndroidComponentsExtension
+            kotlinMultiplatformAndroidComponentsExtension,
+            androidXExtension,
         )
-        // Propagate the compileSdk value into minCompileSdk.
-        kotlinMultiplatformAndroidTarget.aarMetadata.minCompileSdk =
-            kotlinMultiplatformAndroidTarget.compileSdk
-        project.disableStrictVersionConstraints()
-
-        project.configureProjectForApiTasks(AndroidMultiplatformApiTaskConfig, androidXExtension)
-
-        kotlinMultiplatformAndroidComponentsExtension.onVariant { it.configureTests() }
-
-        project.configurePublicResourcesStub(project.multiplatformExtension!!)
-        kotlinMultiplatformAndroidComponentsExtension.onVariant { variant ->
-            project.configureMultiplatformSourcesForAndroid(
-                variant.name,
-                kotlinMultiplatformAndroidTarget,
-                androidXExtension.samplesProjects
-            )
+        configureCommonAndroidLibrary(
+            project,
+            androidXExtension,
+            kotlinMultiplatformAndroidComponentsExtension,
+        )
+        kotlinMultiplatformAndroidComponentsExtension.apply {
+            finalizeDsl {
+                it.lint.targetSdk = project.defaultAndroidConfig.targetSdk
+                project.setUpBlankProguardFileForKmpAarIfNeeded(
+                    kotlinMultiplatformAndroidTarget.optimization.consumerKeepRules
+                )
+            }
         }
+
+        kotlinMultiplatformAndroidComponentsExtension.onVariants { variant ->
+            @Suppress("UnstableApiUsage")
+            variant.configureJavaCompileTask { compile ->
+                val defaultTargetJavaVersion =
+                    getDefaultTargetJavaVersion(androidXExtension.type.get(), project.name)
+                        .toString()
+                compile.sourceCompatibility = defaultTargetJavaVersion
+                compile.targetCompatibility = defaultTargetJavaVersion
+            }
+            project.configureProjectForApiTasks(
+                AndroidMultiplatformApiTaskConfig(variant),
+                androidXExtension,
+            )
+            project.configureProjectForKzipTasks(
+                AndroidMultiplatformApiTaskConfig(variant),
+                androidXExtension,
+            )
+            project.configurePublicResourcesStub(variant)
+            project.configureMultiplatformSourcesForAndroid(androidXExtension.samplesProjects)
+            project.configureVerifyELFRegionAlignment(variant)
+            variant.aarMetadata.configureMinAgpVersion()
+        }
+
         project.configureVersionFileWriter(project.multiplatformExtension!!, androidXExtension)
-        project.configureJavaCompilationWarnings(androidXExtension)
 
         project.configureDependencyVerification(androidXExtension) { taskProvider ->
             kotlinMultiplatformAndroidTarget.compilations.configureEach {
                 taskProvider.configure { task -> task.dependsOn(it.compileTaskProvider) }
             }
         }
-
         project.afterEvaluate {
             project.addToBuildOnServer("assembleAndroidMain")
             project.addToBuildOnServer("lint")
-        }
-        project.setUpCheckDocsTask(androidXExtension)
-        project.writeBlankPublicTxtToAar(kotlinMultiplatformAndroidComponentsExtension)
-        kotlinMultiplatformAndroidComponentsExtension.onVariant {
-            project.validateKotlinModuleFiles(it.name, it.artifacts.get(SingleArtifact.AAR))
+            // Created to be consumed by docs-tip-of-tree
+            project.configurations.register("androidIntermediates") {
+                it.isCanBeResolved = false
+                it.attributes.attribute(
+                    Usage.USAGE_ATTRIBUTE,
+                    project.objects.named(Usage.JAVA_RUNTIME),
+                )
+                it.attributes.attribute(
+                    Category.CATEGORY_ATTRIBUTE,
+                    project.objects.named<Category>(Category.LIBRARY),
+                )
+                it.attributes.attribute(
+                    BuildTypeAttr.ATTRIBUTE,
+                    project.objects.named<BuildTypeAttr>("release"),
+                )
+                it.outgoing.artifact(project.tasks.named("createFullJarAndroidMain"))
+            }
         }
     }
 
-    private fun Project.writeBlankPublicTxtToAar(
-        componentsExtension: KotlinMultiplatformAndroidComponentsExtension
-    ) {
-        val blankPublicResourceDir =
-            project.getSupportRootFolder().resolve("buildSrc/blank-res-api")
-        componentsExtension.onVariant { variant ->
-            val taskProvider =
-                tasks.register(
-                    "repackageAarWithResourceApi".appendCapitalized(variant.name),
-                    RepackagingTask::class.java
-                ) { task ->
-                    task.from(blankPublicResourceDir)
-                    task.from(zipTree(task.aarFile))
-                    task.destinationDirectory.fileProvider(
-                        task.output.locationOnly.map { location -> location.asFile.parentFile }
-                    )
-                    task.archiveFileName.set(
-                        task.output.locationOnly.map { location -> location.asFile.name }
-                    )
+    private fun configureProtobufPlugin(project: Project) {
+        project.extensions.getByType(ProtobufExtension::class.java).apply {
+            protoc { it.artifact = project.getLibraryByName("protobufCompiler").toString() }
+            generateProtoTasks {
+                it.all().configureEach { task ->
+                    // java projects have "java" output enabled, however Android projects do not
+                    // so we need to create it for Android projects.
+                    // https://github.com/google/protobuf-gradle-plugin?tab=readme-ov-file#default-outputs
+                    val java =
+                        if (
+                            project.plugins.hasPlugin("com.android.library") ||
+                                project.plugins.hasPlugin("com.android.application")
+                        ) {
+                            task.builtins.register("java")
+                        } else task.builtins.named("java")
+                    java.configure { options -> options.option("lite") }
                 }
-            variant.artifacts
-                .use(taskProvider)
-                .wiredWithFiles(RepackagingTask::aarFile, RepackagingTask::output)
-                .toTransform(SingleArtifact.AAR)
+            }
         }
     }
-
-    @Suppress("UnstableApiUsage") // usage of PrivacySandboxSdkExtension
-    private fun configureWithPrivacySandboxSdkPlugin(project: Project) {
-        project.extensions.getByType<PrivacySandboxSdkExtension>().apply {
-            configureLocalAsbSigning(experimentalProperties, project.getKeystore())
-        }
-    }
-
-    private fun configureLocalAsbSigning(
-        experimentalProperties: MutableMap<String, Any>,
-        keyStore: File
-    ) {
-        experimentalProperties[ASB_SIGNING_CONFIG_PROPERTY_NAME] = keyStore.absolutePath
-    }
-
-    private val ASB_SIGNING_CONFIG_PROPERTY_NAME =
-        "android.privacy_sandbox.local_deployment_signing_store_file"
 
     /**
      * Excludes files telling which versions of androidx libraries were used in test apks, to avoid
@@ -760,15 +793,8 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
         project.addToBuildOnServer("assembleRelease")
     }
 
-    private fun Project.buildOnServerDependsOnLint() {
-        if (!project.usingMaxDepVersions()) {
-            project.addToBuildOnServer("lint")
-        }
-    }
-
-    @Suppress("UnstableApiUsage") // usage of HasDeviceTests
-    private fun HasDeviceTests.configureTests() {
-        deviceTestsForEachCompat { deviceTest ->
+    private fun HasDeviceTests.configureTests(keystore: File) {
+        deviceTests.forEach { (_, deviceTest) ->
             deviceTest.packaging.resources.apply {
                 excludeVersionFiles(this)
 
@@ -782,37 +808,19 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
                 // are:
                 //   - net.java.dev.jna:jna:5.5.0
                 excludes.add("/META-INF/LGPL2.1")
+
+                // AGP is unable to merge these and multiple artifacts ship this files
+                // e.g. org/jspecify/jspecify/1.0.0/jspecify-1.0.0.jar
+                //      org/bouncycastle/bcprov-jdk18on/1.78.1/bcprov-jdk18on-1.78.1.jar
+                pickFirsts.add("META-INF/versions/9/OSGI-INF/MANIFEST.MF")
             }
         }
-    }
-
-    /**
-     * Enable long-running method tracing on the UI thread, even if that risks ANR for profiling
-     * convenience.
-     *
-     * See [androidx.build.testConfiguration.INST_ARG_BLOCKLIST], which is used to suppress the arg
-     * in CI.
-     */
-    @Suppress("UnstableApiUsage") // usage of HasDeviceTests
-    private fun HasDeviceTests.enableLongMethodTracingInMicrobenchmark(project: Project) {
-        if (project.hasBenchmarkPlugin()) {
-            deviceTestsForEachCompat { deviceTest ->
-                deviceTest.instrumentationRunnerArguments.put(
-                    "androidx.benchmark.profiling.skipWhenDurationRisksAnr",
-                    "false"
-                )
-            }
-        }
-    }
-
-    @Suppress("UnstableApiUsage") // usage of experimentalProperties
-    private fun Variant.configureLocalAsbSigning(keyStore: File) {
-        experimentalProperties.put(ASB_SIGNING_CONFIG_PROPERTY_NAME, keyStore.absolutePath)
     }
 
     private fun configureWithLibraryPlugin(project: Project, androidXExtension: AndroidXExtension) {
         val buildTypeForTests = "release"
-        project.extensions.getByType<LibraryExtension>().apply {
+        val libraryExtension = project.extensions.getByType<LibraryExtension>()
+        libraryExtension.apply {
             publishing { singleVariant(DEFAULT_PUBLISH_CONFIG) }
 
             configureAndroidBaseOptions(project, androidXExtension)
@@ -824,23 +832,20 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
                 buildType.signingConfig = debugSigningConfig
             }
             testBuildType = buildTypeForTests
-            project.configureTestConfigGeneration(this)
+            project.configureTestConfigGeneration(
+                androidXExtension.isIsolatedProjectsEnabled(),
+                androidXExtension,
+            )
             project.addAppApkToTestConfigGeneration(androidXExtension)
         }
 
         val libraryAndroidComponentsExtension =
             project.extensions.getByType<LibraryAndroidComponentsExtension>()
+        configureCommonAndroidLibrary(project, androidXExtension, libraryAndroidComponentsExtension)
 
         libraryAndroidComponentsExtension.apply {
             finalizeDsl {
-                // Propagate the compileSdk value into minCompileSdk. Don't propagate
-                // compileSdkExtension, since only one library actually depends on the extension
-                // APIs and they can explicitly declare that in their build.gradle. Note that when
-                // we're using a preview SDK, the value for compileSdk will be null and the
-                // resulting AAR metadata won't have a minCompileSdk --
-                // this is okay because AGP automatically embeds forceCompileSdkPreview in the AAR
-                // metadata and uses it instead of minCompileSdk.
-                it.defaultConfig.aarMetadata.minCompileSdk = it.compileSdk
+                project.setUpBlankProguardFileForAarIfNeeded(it.defaultConfig)
                 it.lint.targetSdk = project.defaultAndroidConfig.targetSdk
                 it.testOptions.targetSdk = project.defaultAndroidConfig.targetSdk
                 // Replace with a public API once available, see b/360392255
@@ -849,69 +854,35 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
                         (buildType as TestBuildType).isDebuggable = true
                 }
             }
+            // Disable debug build type for Android Libraries
             beforeVariants(selector().withBuildType("debug")) { variant -> variant.enable = false }
-            beforeVariants(selector().all()) { variant ->
-                variant.androidTest.targetSdk = project.defaultAndroidConfig.targetSdk
-            }
-            onVariants { variant ->
-                variant.configureTests()
-                variant.enableLongMethodTracingInMicrobenchmark(project)
-                project.validateKotlinModuleFiles(
-                    variant.name,
-                    variant.artifacts.get(SingleArtifact.AAR)
-                )
-            }
         }
 
-        project.disableStrictVersionConstraints()
         project.configureVersionFileWriter(libraryAndroidComponentsExtension, androidXExtension)
-        project.configureJavaCompilationWarnings(androidXExtension)
 
-        val prebuiltLibraries = listOf("libtracing_perfetto.so", "libc++_shared.so")
-        val copyPublicResourcesDirTask =
-            project.tasks.register(
-                "generatePublicResourcesStub",
-                CopyPublicResourcesDirTask::class.java
-            ) { task ->
-                task.buildSrcResDir.set(File(project.getSupportRootFolder(), "buildSrc/res"))
-            }
         libraryAndroidComponentsExtension.onVariants { variant ->
             if (variant.buildType == DEFAULT_PUBLISH_CONFIG) {
                 // Standard docs, resource API, and Metalava configuration for AndroidX projects.
                 project.configureProjectForApiTasks(
                     LibraryApiTaskConfig(variant),
-                    androidXExtension
+                    androidXExtension,
+                )
+                project.configureProjectForKzipTasks(
+                    LibraryApiTaskConfig(variant),
+                    androidXExtension,
                 )
             }
             if (variant.name == DEFAULT_PUBLISH_CONFIG) {
                 project.configureSourceJarForAndroid(variant, androidXExtension.samplesProjects)
+                project.configurePublicResourcesStub(variant)
                 project.configureDependencyVerification(androidXExtension) { taskProvider ->
                     taskProvider.configure { task -> task.dependsOn("compileReleaseJavaWithJavac") }
                 }
             }
-            configurePublicResourcesStub(variant, copyPublicResourcesDirTask)
-            val verifyELFRegionAlignmentTaskProvider =
-                project.tasks.register(
-                    variant.name + "VerifyELFRegionAlignment",
-                    VerifyELFRegionAlignmentTask::class.java
-                ) { task ->
-                    task.files.from(
-                        variant.artifacts.get(SingleArtifact.MERGED_NATIVE_LIBS).map { dir ->
-                            dir.asFileTree.files
-                                .filter { it.extension == "so" }
-                                .filter { it.path.contains("arm64-v8a") }
-                                .filterNot { prebuiltLibraries.contains(it.name) }
-                        }
-                    )
-                    task.cacheEvenIfNoOutputs()
-                }
-            project.addToBuildOnServer(verifyELFRegionAlignmentTaskProvider)
+            project.configureVerifyELFRegionAlignment(variant)
+            variant.aarMetadata.configureMinAgpVersion()
         }
-
-        project.setUpCheckDocsTask(androidXExtension)
-
         project.buildOnServerDependsOnAssembleRelease()
-        project.buildOnServerDependsOnLint()
     }
 
     private fun configureGradlePluginPlugin(project: Project) {
@@ -919,26 +890,17 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
             it.enableStricterValidation.set(true)
             it.failOnWarning.set(true)
         }
+        project.addToBuildOnServer("validatePlugins")
         SdkResourceGenerator.generateForHostTest(project)
     }
 
-    private fun getDefaultTargetJavaVersion(
-        libraryType: LibraryType,
-        projectName: String? = null,
-        targetName: String? = null
-    ): JavaVersion {
-        return when {
-            // TODO(b/353328300): Move room-compiler-processing to Java 17 once Dagger is ready.
-            projectName != null && projectName.contains("room-compiler-processing") -> VERSION_11
-            projectName != null && projectName.contains("desktop") -> VERSION_11
-            targetName != null && (targetName == "desktop" || targetName == "jvmStubs") ->
-                VERSION_11
-            libraryType.compilationTarget == CompilationTarget.HOST -> VERSION_17
-            else -> VERSION_1_8
-        }
-    }
-
     private fun configureWithJavaPlugin(project: Project, androidXExtension: AndroidXExtension) {
+        if (
+            project.multiplatformExtension != null &&
+                !project.multiplatformExtension!!.hasJvmTarget()
+        ) {
+            return
+        }
         project.configureErrorProneForJava()
 
         // Force Java 1.8 source- and target-compatibility for all Java libraries.
@@ -946,23 +908,29 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
         project.afterEvaluate {
             javaExtension.apply {
                 val defaultTargetJavaVersion =
-                    getDefaultTargetJavaVersion(androidXExtension.type, project.name)
+                    getDefaultTargetJavaVersion(androidXExtension.type.get(), project.name)
                 sourceCompatibility = defaultTargetJavaVersion
                 targetCompatibility = defaultTargetJavaVersion
-                project.disableJava8TargetObsoleteWarnings()
             }
-            if (!project.plugins.hasPlugin(KotlinBasePluginWrapper::class.java)) {
+            if (
+                !project.plugins.hasPlugin(KotlinBasePluginWrapper::class.java) ||
+                    !project.plugins.hasPlugin(KotlinBaseApiPlugin::class.java)
+            ) {
                 project.configureSourceJarForJava(androidXExtension.samplesProjects)
             }
         }
 
+        project.setUpBlankProguardFileForJarIfNeeded(javaExtension)
         project.configureJavaCompilationWarnings(androidXExtension)
 
-        project.hideJavadocTask()
-
-        project.configureDependencyVerification(androidXExtension) { taskProvider ->
-            taskProvider.configure { task ->
-                task.dependsOn(project.tasks.named(JavaPlugin.COMPILE_JAVA_TASK_NAME))
+        if (
+            project.multiplatformExtension == null ||
+                project.multiplatformExtension!!.hasJavaEnabled()
+        ) {
+            project.configureDependencyVerification(androidXExtension) { taskProvider ->
+                taskProvider.configure { task ->
+                    task.dependsOn(project.tasks.named(JavaPlugin.COMPILE_JAVA_TASK_NAME))
+                }
             }
         }
 
@@ -974,19 +942,8 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
             }
 
         project.configureProjectForApiTasks(apiTaskConfig, androidXExtension)
+        project.configureProjectForKzipTasks(apiTaskConfig, androidXExtension)
         project.setUpCheckDocsTask(androidXExtension)
-
-        project.afterEvaluate {
-            if (androidXExtension.shouldRelease()) {
-                project.extra.set("publish", true)
-            }
-        }
-
-        // Workaround for b/120487939 wherein Gradle's default resolution strategy prefers external
-        // modules with lower versions over local projects with higher versions.
-        project.configurations.configureEach { configuration ->
-            configuration.resolutionStrategy.preferProjectModules()
-        }
 
         if (project.multiplatformExtension == null) {
             project.addToBuildOnServer("jar")
@@ -1005,12 +962,13 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
         // AndroidXExtension.mavenGroup is not readable until afterEvaluate.
         afterEvaluate {
             val mavenGroup = androidXExtension.mavenGroup
+            val type = androidXExtension.type.get()
             val isProbablyPublished =
-                androidXExtension.type == LibraryType.PUBLISHED_LIBRARY ||
-                    androidXExtension.type ==
-                        LibraryType.PUBLISHED_LIBRARY_ONLY_USED_BY_KOTLIN_CONSUMERS ||
-                    androidXExtension.type == LibraryType.UNSET
-            if (mavenGroup != null && isProbablyPublished && androidXExtension.shouldPublish()) {
+                type == SoftwareType.PUBLISHED_LIBRARY ||
+                    type == SoftwareType.PUBLISHED_LIBRARY_ONLY_USED_BY_KOTLIN_CONSUMERS
+            if (
+                mavenGroup != null && isProbablyPublished && androidXExtension.shouldPublish.get()
+            ) {
                 validateProjectMavenGroup(mavenGroup.group)
                 validateProjectMavenName(androidXExtension.name.get(), mavenGroup.group)
                 validateProjectStructure(mavenGroup.group)
@@ -1023,53 +981,54 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
         afterEvaluate { androidXExtension.validateMavenVersion() }
     }
 
-    private fun CommonExtension<*, *, *, *, *, *>.configureAndroidBaseOptions(
+    private fun Any.configureAndroidBaseOptions(
         project: Project,
-        androidXExtension: AndroidXExtension
+        androidXExtension: AndroidXExtension,
     ) {
+        // Workaround to avoid specifying the parametrized types of CommonExtension explicitly
+        // So we can clean up the parameters in AGP
+        // The compiler can infer that this is CommonExtension from these checks
+        if (this !is ApplicationExtension && this !is LibraryExtension && this !is TestExtension) {
+            throw IllegalArgumentException("Unexpected extension: $this")
+        }
         compileOptions.apply {
             sourceCompatibility = VERSION_1_8
             targetCompatibility = VERSION_1_8
         }
-        project.disableJava8TargetObsoleteWarnings()
 
         val defaultMinSdk = project.defaultAndroidConfig.minSdk
-        val defaultCompileSdk = project.defaultAndroidConfig.compileSdk
 
         // Suppress output of android:compileSdkVersion and related attributes (b/277836549).
         androidResources.additionalParameters += "--no-compile-sdk-metadata"
 
-        compileSdk = project.defaultAndroidConfig.compileSdk
+        compileSdk { version = release(project.defaultAndroidConfig.compileSdk) }
 
         buildToolsVersion = project.defaultAndroidConfig.buildToolsVersion
 
-        defaultConfig.ndk.abiFilters.addAll(
-            listOf("armeabi-v7a", "arm64-v8a", "x86", "x86_64", "riscv64")
-        )
-        defaultConfig.minSdk = defaultMinSdk
+        defaultConfig.ndk.abiFilters.addAll(SUPPORTED_BUILD_ABIS)
+        defaultConfig.minSdk { version = release(defaultMinSdk) }
         defaultConfig.testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
 
         testOptions.animationsDisabled = !project.isMacrobenchmark()
-        testOptions.unitTests.isReturnDefaultValues = true
-        testOptions.unitTests.all { task -> task.configureForRobolectric() }
-
-        // Include resources in Robolectric tests as a workaround for b/184641296
-        testOptions.unitTests.isIncludeAndroidResources = true
 
         project.afterEvaluate {
+            check(
+                !androidXExtension.shouldPublish.get() ||
+                    !compileOptions.isCoreLibraryDesugaringEnabled
+            ) {
+                "AndroidX libraries are not permitted to use core library desugaring as it " +
+                    "forces library users to also enable core library desugaring."
+            }
+
             val minSdkVersion = defaultConfig.minSdk!!
             check(minSdkVersion >= defaultMinSdk) {
                 "minSdkVersion $minSdkVersion lower than the default of $defaultMinSdk"
             }
-            check(compileSdk == defaultCompileSdk || project.isCustomCompileSdkAllowed()) {
-                "compileSdk must not be explicitly specified, was \"$compileSdk\""
-            }
-
             project.enforceBanOnVersionRanges()
 
-            if (androidXExtension.type.compilationTarget != CompilationTarget.DEVICE) {
+            if (androidXExtension.type.get().compilationTarget != CompilationTarget.DEVICE) {
                 throw IllegalStateException(
-                    "${androidXExtension.type.name} libraries cannot apply the android plugin, as" +
+                    "${androidXExtension.type.get().name} libraries cannot apply the android plugin, as" +
                         " they do not target android devices"
                 )
             }
@@ -1106,36 +1065,28 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
         )
     }
 
-    private fun KotlinMultiplatformAndroidTarget.configureAndroidBaseOptions(
+    private fun KotlinMultiplatformAndroidLibraryTarget.configureAndroidBaseOptions(
         project: Project,
-        componentsExtension: KotlinMultiplatformAndroidComponentsExtension
+        componentsExtension: KotlinMultiplatformAndroidComponentsExtension,
+        androidXExtension: AndroidXExtension,
     ) {
         val defaultMinSdkVersion = project.defaultAndroidConfig.minSdk
-        val defaultCompileSdk = project.defaultAndroidConfig.compileSdk
-
-        compileSdk = defaultCompileSdk
+        compileSdk { version = release(project.defaultAndroidConfig.compileSdk) }
         buildToolsVersion = project.defaultAndroidConfig.buildToolsVersion
-
-        minSdk = defaultMinSdkVersion
+        minSdk { version = release(defaultMinSdkVersion) }
 
         lint.targetSdk = project.defaultAndroidConfig.targetSdk
         compilations
-            .withType(KotlinMultiplatformAndroidTestOnDeviceCompilation::class.java)
+            .withType(KotlinMultiplatformAndroidDeviceTestCompilation::class.java)
             .configureEach {
                 it.instrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
                 it.animationsDisabled = true
             }
-        compilations
-            .withType(KotlinMultiplatformAndroidTestOnJvmCompilation::class.java)
-            .configureEach {
-                it.isReturnDefaultValues = true
-                // Include resources in Robolectric tests as a workaround for b/184641296
-                it.isIncludeAndroidResources = true
-            }
 
-        project.tasks.withType(AndroidUnitTest::class.java).configureEach { task ->
-            task.configureForRobolectric()
-        }
+        withHostTestBuilder {} // enable Android host tests
+        withDeviceTestBuilder { sourceSetTreeName = "test" }
+            .configure { signing.storeFile = project.getKeystore() }
+        configureTargetSdkForTests(project.defaultAndroidConfig.targetSdk)
 
         // validate that SDK versions haven't been altered during evaluation
         project.afterEvaluate {
@@ -1143,14 +1094,28 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
             check(minSdkVersion >= defaultMinSdkVersion) {
                 "minSdkVersion $minSdkVersion lower than the default of $defaultMinSdkVersion"
             }
-            check(compileSdk == defaultCompileSdk || project.isCustomCompileSdkAllowed()) {
-                "compileSdk must not be explicitly specified, was \"$compileSdk\""
-            }
             project.enforceBanOnVersionRanges()
         }
 
-        project.configureTestConfigGeneration(this, componentsExtension)
+        project.configureTestConfigGeneration(
+            buildFeatures.isIsolatedProjectsEnabled(),
+            androidXExtension,
+        )
         project.configureFtlRunner(componentsExtension)
+    }
+
+    // TODO(b/425976012): Set targetSdkForTests to project.defaultAndroidConfig.targetSdk
+    private fun KotlinMultiplatformAndroidLibraryTarget.configureTargetSdkForTests(version: Int?) {
+        checkNotNull(version) {
+            "version must be set for tests. call `configureTargetSdkForTests` in the `finalizeDsl` block"
+        }
+        compilations
+            .withType(KotlinMultiplatformAndroidDeviceTestCompilation::class.java)
+            .configureEach { it.targetSdk { this.version = release(version) } }
+
+        compilations
+            .withType(KotlinMultiplatformAndroidHostTestCompilation::class.java)
+            .configureEach { it.targetSdk { this.version = release(version.coerceAtMost(35)) } }
     }
 
     /**
@@ -1206,7 +1171,7 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
         sourceSets
             .findByName("androidTest")!!
             .manifest
-            .srcFile("src/androidInstrumentedTest/AndroidManifest.xml")
+            .srcFile("src/androidDeviceTest/AndroidManifest.xml")
     }
 
     private fun Project.configureKmp() {
@@ -1219,45 +1184,41 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
                     .trimIndent()
             }
 
-        kmpExtension.targets.configureEach { kotlinTarget ->
-            kotlinTarget.compilations.configureEach { compilation ->
-                // Configure all KMP targets to allow expect/actual classes that are not stable.
-                // (see https://youtrack.jetbrains.com/issue/KT-61573)
-                compilation.compileTaskProvider.configure { task ->
-                    task.compilerOptions.freeCompilerArgs.add("-Xexpect-actual-classes")
-                    androidXConfiguration.kotlinApiVersion.let {
-                        task.compilerOptions.apiVersion.set(it)
-                        task.compilerOptions.languageVersion.set(it)
-                    }
-                }
-            }
+        kmpExtension.compilerOptions {
+            // Configure all KMP targets to allow expect/actual classes that are not stable.
+            // (see https://youtrack.jetbrains.com/issue/KT-61573)
+            freeCompilerArgs.add("-Xexpect-actual-classes")
+
+            apiVersion.set(androidXConfiguration.kotlinApiVersion)
+            languageVersion.set(androidXConfiguration.kotlinApiVersion)
         }
     }
 
     private fun ApplicationExtension.configureAndroidApplicationOptions(
         project: Project,
-        androidXExtension: AndroidXExtension
+        androidXExtension: AndroidXExtension,
     ) {
         defaultConfig.apply {
             versionCode = 1
             versionName = "1.0"
         }
 
-        project.configureTestConfigGeneration(this)
+        project.configureTestConfigGeneration(
+            androidXExtension.isIsolatedProjectsEnabled(),
+            androidXExtension,
+        )
         project.addAppApkToTestConfigGeneration(androidXExtension)
         project.addAppApkToFtlRunner()
     }
 
     private fun Project.configureDependencyVerification(
         androidXExtension: AndroidXExtension,
-        taskConfigurator: (TaskProvider<VerifyDependencyVersionsTask>) -> Unit
+        taskConfigurator: (TaskProvider<VerifyDependencyVersionsTask>) -> Unit,
     ) {
+        if (buildFeatures.isIsolatedProjectsEnabled()) return
         afterEvaluate {
-            if (androidXExtension.type !in listOf(LibraryType.UNSET, LibraryType.SAMPLES)) {
-                val verifyDependencyVersionsTask = project.createVerifyDependencyVersionsTask()
-                if (verifyDependencyVersionsTask != null) {
-                    taskConfigurator(verifyDependencyVersionsTask)
-                }
+            if (androidXExtension.type.get().requiresDependencyVerification()) {
+                taskConfigurator(project.createVerifyDependencyVersionsTask())
             }
         }
     }
@@ -1265,7 +1226,9 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
     // If this project wants other project in the same group to have the same version,
     // this function configures those constraints.
     private fun Project.configureConstraintsWithinGroup(androidXExtension: AndroidXExtension) {
-        if (!project.shouldAddGroupConstraints().get()) {
+        if (
+            !project.shouldAddGroupConstraints().get() || buildFeatures.isIsolatedProjectsEnabled()
+        ) {
             return
         }
         project.afterEvaluate {
@@ -1315,12 +1278,21 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
                     continue
                 }
                 // We only emit constraints referring to projects that will release
-                val otherFilepath = File(otherProject.filePath, "build.gradle")
-                val parsed = parseBuildFile(otherFilepath)
+                val otherFilepath =
+                    getSupportRootFolder().resolve(File(otherProject.filePath, "build.gradle"))
+                val parsed =
+                    if (otherFilepath.exists()) {
+                        parseBuildFile(otherFilepath)
+                    } else {
+                        parseBuildFile(
+                            getSupportRootFolder()
+                                .resolve(File(otherProject.filePath, "build.gradle.kts"))
+                        )
+                    }
                 if (!parsed.shouldRelease()) {
                     continue
                 }
-                if (parsed.libraryType == LibraryType.SAMPLES) {
+                if (parsed.softwareType == SoftwareType.SAMPLES) {
                     // a SAMPLES project knows how to publish, but we don't intend to actually
                     // publish it
                     continue
@@ -1375,6 +1347,18 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
         }
     }
 
+    private fun Project.configureVerifyELFRegionAlignment(variant: LibraryVariant) {
+        val verifyELFRegionAlignmentTaskProvider =
+            project.tasks.register(
+                variant.name + "VerifyELFRegionAlignment",
+                VerifyELFRegionAlignmentTask::class.java,
+            ) { task ->
+                task.mergedNativeLibs.set(variant.artifacts.get(SingleArtifact.MERGED_NATIVE_LIBS))
+                task.cacheEvenIfNoOutputs()
+            }
+        project.addToBuildOnServer(verifyELFRegionAlignmentTaskProvider)
+    }
+
     /**
      * Tells whether this build contains the usual set of all projects (`./gradlew projects`)
      * Sometimes developers request to include fewer projects because this may run more quickly
@@ -1393,48 +1377,55 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
 
         const val EXTENSION_NAME = "androidx"
 
+        // b/366238650
+        val SUPPORTED_BUILD_ABIS = listOf("armeabi-v7a", "arm64-v8a", "x86", "x86_64")
+
         /** Fail the build if a non-Studio task runs longer than expected */
         const val TASK_TIMEOUT_MINUTES = 60L
     }
 }
 
+internal fun getDefaultTargetJavaVersion(
+    softwareType: SoftwareType,
+    projectName: String? = null,
+    targetName: String? = null,
+): JavaVersion {
+    return when {
+        // TODO(b/353328300): Move room-compiler-processing to Java 17 once Dagger is ready.
+        projectName != null && projectName.contains("room3-compiler-processing") -> VERSION_11
+        projectName != null && projectName.contains("desktop") -> VERSION_11
+        targetName != null && (targetName == "desktop" || targetName == "jvmStubs") -> VERSION_11
+        softwareType.compilationTarget == CompilationTarget.HOST -> VERSION_17
+        else -> VERSION_1_8
+    }
+}
+
 private fun Project.validateLintVersionTestExists(androidXExtension: AndroidXExtension) {
-    if (androidXExtension.type != LibraryType.LINT) {
+    if (!androidXExtension.type.get().isLint()) {
         return
     }
     kotlinExtensionOrNull?.let { extension ->
-        val projectFiles = extension.sourceSets.flatMap { it.kotlin.files }
-        // if the project doesn't define a registry it doesn't make sense to test versions
-        if (projectFiles.none { it.name.contains("Registry") }) {
-            return
-        }
-        projectFiles.find { it.name == "ApiLintVersionsTest.kt" }
-            ?: throw GradleException("Lint projects should include ApiLintVersionsTest.kt")
+        val validateLintChecks =
+            tasks.register("validateLintChecks", ValidateLintChecks::class.java) { task ->
+                task.cacheEvenIfNoOutputs()
+                task.sourceDirectories.from(
+                    extension.sourceSets.flatMap { it.kotlin.sourceDirectories }
+                )
+            }
+        addToBuildOnServer(validateLintChecks)
     }
 }
 
 /** Returns whether the configuration is used for testing. */
 private fun Configuration.isTest(): Boolean = name.lowercase().contains("test")
 
-/**
- * Hides a project's Javadoc tasks from the output of `./gradlew tasks` by setting their group to
- * `null`.
- *
- * AndroidX projects do not use the Javadoc task for docs generation, so we don't want them
- * cluttering up the task overview.
- */
-private fun Project.hideJavadocTask() {
-    tasks.withType(Javadoc::class.java).configureEach {
-        if (it.name == "javadoc") {
-            it.group = null
-        }
-    }
-}
+/** Returns whether the configuration is part of publication. */
+internal fun Configuration.isPublished(): Boolean =
+    !isTest() && !name.lowercase().contains("metadata") && !name.endsWith("CInterop")
 
-val Project.androidExtension: AndroidComponentsExtension<*, *, *>
+internal val Project.androidExtension: AndroidComponentsExtension<*, *, *>
     get() =
-        extensions.findByType<LibraryAndroidComponentsExtension>()
-            ?: extensions.findByType<ApplicationAndroidComponentsExtension>()
+        extensions.findByType<KotlinMultiplatformAndroidComponentsExtension>()
             ?: throw IllegalArgumentException("Failed to find any registered Android extension")
 
 val Project.multiplatformExtension
@@ -1451,36 +1442,56 @@ val Project.androidXExtension: AndroidXExtension
  * [TASK_TIMEOUT_MINUTES].
  */
 internal fun Project.configureTaskTimeouts() {
+    // A set of tasks that sometimes take >60 minutes. b/383874664
+    val slowTasks =
+        setOf(
+            ":compose:ui:ui:compileReleaseAndroidTestKotlinAndroid",
+            ":compose:foundation:foundation:compileReleaseAndroidTestKotlinAndroid",
+            ":compose:foundation:foundation:integration-tests:lazy-tests:compileReleaseAndroidTestKotlin",
+        )
     tasks.configureEach { t ->
         // skip adding a timeout for some tasks that both take a long time and
         // that we can count on the user to monitor
         if (t !is StudioTask) {
-            t.timeout.set(Duration.ofMinutes(TASK_TIMEOUT_MINUTES))
+            t.timeout.set(
+                Duration.ofMinutes(if (t.path in slowTasks) 80L else TASK_TIMEOUT_MINUTES)
+            )
         }
     }
 }
 
-private fun Project.disableJava8TargetObsoleteWarnings() {
-    afterEvaluate {
-        project.tasks.withType(JavaCompile::class.java).configureEach { task ->
-            // JDK 21 considers Java 8 an obsolete source and target value. Disable this warning.
-            task.options.compilerArgs.add("-Xlint:-options")
-        }
-    }
-}
-
-private fun Project.configureJavaCompilationWarnings(androidXExtension: AndroidXExtension) {
-    afterEvaluate {
-        project.tasks.withType(JavaCompile::class.java).configureEach { task ->
-            // If we're running a hypothetical test build confirming that tip-of-tree versions
-            // are compatible, then we're not concerned about warnings
-            if (!project.usingMaxDepVersions()) {
-                task.options.compilerArgs.add("-Xlint:unchecked")
-                if (androidXExtension.failOnDeprecationWarnings) {
-                    task.options.compilerArgs.add("-Xlint:deprecation")
-                }
+private class JavaCompileArgumentProvider(
+    private val isTestApp: Boolean,
+    private val failOnDeprecationWarnings: Provider<Boolean>,
+    private val usingMaxDepVersions: Provider<Boolean>,
+) : CommandLineArgumentProvider {
+    override fun asArguments(): List<String> {
+        // JDK 21 considers Java 8 an obsolete source and target value. Disable this warning.
+        val args = mutableListOf("-Xlint:-options")
+        // If we're running a hypothetical test build confirming that tip-of-tree versions
+        // are compatible, then we're not concerned about warnings
+        if (!usingMaxDepVersions.get() && !isTestApp) {
+            args.add("-Xlint:unchecked")
+            if (failOnDeprecationWarnings.get()) {
+                args.add("-Xlint:deprecation")
             }
         }
+        return args
+    }
+}
+
+private fun Project.configureJavaCompilationWarnings(
+    androidXExtension: AndroidXExtension,
+    isTestApp: Boolean = false,
+) {
+    project.tasks.withType(JavaCompile::class.java).configureEach { task ->
+        task.options.compilerArgumentProviders.add(
+            JavaCompileArgumentProvider(
+                isTestApp = isTestApp,
+                failOnDeprecationWarnings = androidXExtension.failOnDeprecationWarnings,
+                usingMaxDepVersions = usingMaxDepVersions(),
+            )
+        )
     }
 }
 
@@ -1516,54 +1527,24 @@ fun Project.validateMultiplatformPluginHasNotBeenApplied() {
     }
 }
 
-/** Verifies we don't accidentially write "implementation" instead of "commonMainImplementation" */
-fun Project.disallowAccidentalAndroidDependenciesInKmpProject(
-    androidXKmpExtension: AndroidXMultiplatformExtension
-) {
-    project.afterEvaluate {
-        if (androidXKmpExtension.supportedPlatforms.isNotEmpty()) {
-            val androidConfiguration = project.configurations.findByName("implementation")
-            if (androidConfiguration != null) {
-                if (
-                    androidConfiguration.dependencies.isNotEmpty() ||
-                        androidConfiguration.dependencyConstraints.isNotEmpty()
-                ) {
-                    throw GradleException(
-                        "The 'implementation' Configuration should not be used in a " +
-                            "multiplatform project: this Configuration is declared by the " +
-                            "Android plugin rather than the kmp plugin. Did you mean " +
-                            "'commonMainImplementation'?"
-                    )
-                }
-            }
-        }
-    }
-}
-
 /** Verifies that ProjectParser computes the correct values for this project */
 fun Project.validateProjectParser(androidXExtension: AndroidXExtension) {
     // If configuration fails, we don't want to validate the ProjectParser
     // (otherwise it could report a confusing, unnecessary error)
     project.gradle.taskGraph.whenReady {
-        if (!androidXExtension.runProjectParser) return@whenReady
-
         val parsed = project.parse()
         val errorPrefix = "ProjectParser error parsing ${project.path}."
-        check(androidXExtension.type == parsed.libraryType) {
-            "$errorPrefix Incorrectly computed libraryType = ${parsed.libraryType} " +
-                "instead of ${androidXExtension.type}"
+        check(androidXExtension.type.get() == parsed.softwareType) {
+            "$errorPrefix Incorrectly computed libraryType = ${parsed.softwareType} " +
+                "instead of ${androidXExtension.type.get()}"
         }
-        check(androidXExtension.publish == parsed.publish) {
-            "$errorPrefix Incorrectly computed publish = ${parsed.publish} " +
-                "instead of ${androidXExtension.publish}"
-        }
-        check(androidXExtension.shouldPublish() == parsed.shouldPublish()) {
+        check(androidXExtension.shouldPublish.get() == parsed.shouldPublish()) {
             "$errorPrefix Incorrectly computed shouldPublish() = ${parsed.shouldPublish()} " +
-                "instead of ${androidXExtension.shouldPublish()}"
+                "instead of ${androidXExtension.shouldPublish.get()}"
         }
-        check(androidXExtension.shouldRelease() == parsed.shouldRelease()) {
+        check(androidXExtension.shouldRelease.get() == parsed.shouldRelease()) {
             "$errorPrefix Incorrectly computed shouldRelease() = ${parsed.shouldRelease()} " +
-                "instead of ${androidXExtension.shouldRelease()}"
+                "instead of ${androidXExtension.shouldRelease.get()}"
         }
         check(androidXExtension.projectDirectlySpecifiesMavenVersion == parsed.specifiesVersion) {
             "$errorPrefix Incorrectly computed specifiesVersion = ${parsed.specifiesVersion} " +
@@ -1593,23 +1574,32 @@ fun AndroidXExtension.validateMavenVersion() {
     }
 }
 
-/** Workaround for https://github.com/gradle/gradle/issues/27407 */
-fun Project.workaroundPrebuiltTakingPrecedenceOverProject() {
+/** Workarounds for configuration resolution */
+fun Project.workaroundAndroidXDependencyResolutions() {
     project.configurations.configureEach { configuration ->
+        // https://github.com/gradle/gradle/issues/27407
         configuration.resolutionStrategy.preferProjectModules()
+
+        // https://github.com/gradle/gradle/issues/7594
+        configuration.resolutionStrategy.eachDependency { dependency ->
+            if (dependency.requested.group.startsWith("androidx.")) {
+                // Drop aar classifier that comes from <type>aar</type> in POM files
+                // as it causes a bug in Gradle. Gradle does not actually need the
+                // classifiers for Android libraries for them to work correctly.
+                dependency.artifactSelection { it.withoutArtifactSelectors() }
+            }
+        }
     }
 }
 
-private fun Test.configureForRobolectric() {
-    // https://github.com/robolectric/robolectric/issues/7456
-    jvmArgs =
-        listOf(
-            "--add-opens=java.base/java.lang=ALL-UNNAMED",
-            "--add-opens=java.base/java.util=ALL-UNNAMED",
-            "--add-opens=java.base/java.io=ALL-UNNAMED",
-        )
-    // Robolectric 1.7 increased heap size requirements, see b/207169653.
-    maxHeapSize = "3g"
+private fun Project.configureUnzipChromeBuildService() {
+    if (ProjectLayoutType.isPlayground(this)) {
+        return
+    }
+    gradle.sharedServices.registerIfAbsent("unzipChrome", UnzipChromeBuildService::class.java) {
+        it.parameters.browserDir.set(File(getPrebuiltsRoot(), "androidx/chrome-for-testing/"))
+        it.parameters.unzipToDir.set(getOutDirectory().resolve("chrome-bin"))
+    }
 }
 
 private fun Project.enforceBanOnVersionRanges() {
@@ -1641,8 +1631,13 @@ internal fun Project.hasAndroidMultiplatformPlugin(): Boolean =
     extensions.findByType(AndroidXMultiplatformExtension::class.java)?.hasAndroidMultiplatform()
         ?: false
 
+@Suppress("DEPRECATION")
+internal fun KotlinMultiplatformExtension.hasJavaEnabled(): Boolean =
+    targets.withType(KotlinJvmTarget::class.java).singleOrNull()?.withJavaEnabled ?: false
+
+internal fun KotlinMultiplatformExtension.hasJvmTarget(): Boolean =
+    targets.withType(KotlinJvmTarget::class.java).isEmpty().not()
+
 internal fun String.camelCase() = replaceFirstChar {
     if (it.isLowerCase()) it.titlecase() else it.toString()
 }
-
-const val PROJECT_OR_ARTIFACT_EXT_NAME = "projectOrArtifact"
